# ssd1306-i2c

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md
examples/: presence_motion_shock.rs  simple-text.rs
src/: brightness.rs  builder.rs  command.rs  constants.rs  data.rs  displayrotation.rs  displaysize.rs  error.rs  lib.rs  prelude.rs  properties.rs
src/interface/: i2c.rs  mod.rs  spi.rs
src/mode/: displaymode.rs  graphics.rs  mod.rs  raw.rs
