[package]
name = "ssd1306-i2c"
version = "0.1.0"
edition = "2021"

authors = ["fordauthor42@gmail.com"]
repository = "https://github.com/marvinrobot42/ssd1306-i2c.git"
description = "SSD 1306 I2C driver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT OR Apache-2.0"
keywords = ["driver", "sensor", "i2c", "ssd1306"]
categories = ["embedded", "no-std"]
publish = true
exclude = [
    ".gitattributes",
    ".drone.yml",
    ".pre-commit-config.yaml",
    "Makefile.toml",
]

[dependencies]
log = { version = "0.4.18", default-features = false }
# libm = "0.2.8"
embedded-hal = {version = "1.0"}
embedded-graphics-core = { version = "0.4.0", optional = true }


[build-dependencies]
embuild = "=0.31.4"

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]
